tests/types/errors/duplicate_loop_label.mog
outer: while (true) {
    outer: while (false) {
    }
    break
}
